# misty-doi

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT  README.md  SECURITY.md  index.html  misty.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: AUTOMATION.md  CLI.md  METADATA.md
examples/example-dataset/: misty.json
examples/example-software/: misty.json
examples/romenagri/: misty.json
misty/: __init__.py  checksum.py  cli.py  errors.py  metadata.py  ots.py  package.py  result.py  transform.py  zenodo.py
schemas/: misty-metadata.schema.json
scripts/: zenodo-publish.sh
tests/: test_core.py  test_smoke.py
